--- a/Fontus/index.html
+++ b/Fontus/index.html
@@ -113,6 +113,7 @@
         <thead>
           <tr>
             <th>Time</th>
+            <th>Sensor</th>
             <th>Value</th>
           </tr>
         </thead>
