--- a/Fontus/index.html
+++ b/Fontus/index.html
@@ -113,7 +113,9 @@
         <thead>
           <tr>
             <th>Time</th>
-            <th>Sensor</th>
+            <th>Moisture</th>
+            <th>Value</th>
+            <th>Flow Count</th>
             <th>Value</th>
           </tr>
         </thead>
