Formatted flow data to web page.

--- a/Fontus/index.html
+++ b/Fontus/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>Watering System</title>
+    <style type="text/css">
+        #moisture table, th, td { border-collapse: collapse; border: 1px solid black; }
+        #moisture th, td { text-align: center; padding-left: 0.25em; padding-right: 0.25em; }
+    </style>
   </head>
   <body>
     <h1>Watering System</h1>
@@ -115,8 +119,7 @@
             <th>Time</th>
             <th>Moisture</th>
             <th>Value</th>
-            <th>Flow Count</th>
-            <th>Value</th>
+            <th>Flow Value</th>
           </tr>
         </thead>
         <tbody>
