Updated browser to display if we are watering along with the moisture and flow data.

--- a/Fontus/index.html
+++ b/Fontus/index.html
@@ -120,6 +120,7 @@
             <th>Moisture</th>
             <th>Value</th>
             <th>Flow Value</th>
+            <th>Watering System</th>
           </tr>
         </thead>
         <tbody>
